force-app/main/default/objects/Incomplete_Job__c/Incomplete_Job__c.object-meta.xml
<CustomObject>
    <label>Incomplete Job</label>
    <nameField>
        <displayFormat>IJ-{0000}</displayFormat>
        <label>Incomplete Job ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incomplete Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>