force-app/main/default/objects/Incomplete_Job__c/fields/Address_ID__c.field-meta.xml
<CustomField>
    <fullName>Address_ID__c</fullName>
    <label>Address ID</label>
    <length>120</length>
    <type>Text</type>
</CustomField>