force-app/main/default/objects/Incomplete_Job__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Incomplete Jobs</relationshipLabel>
    <relationshipName>Incomplete_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>