force-app/main/default/objects/Incomplete_Job__c/fields/Contact_Email_Exists__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Exists__c</fullName>
    <description>Checks to verify that a contact email exists.</description>
    <formula>NOT(ISBLANK( Contact__r.Email ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email Exists</label>
    <type>Checkbox</type>
</CustomField>