force-app/main/default/objects/Incomplete_Job__c/fields/Contractor_ID__c.field-meta.xml
<CustomField>
    <fullName>Contractor_ID__c</fullName>
    <formula>TEXT(Account__r.Contractor_Id__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contractor ID</label>
    <type>Text</type>
</CustomField>