force-app/main/default/objects/Incomplete_Job__c/fields/GROUP_ID__c.field-meta.xml
<CustomField>
    <fullName>GROUP_ID__c</fullName>
    <formula>&quot;IJ&quot;+&quot;-&quot;&amp;Contractor_ID__c + &quot;-&quot; + TEXT(MONTH(Scheduled_Date__c))+TEXT(DAY(Scheduled_Date__c))+TEXT(YEAR(Scheduled_Date__c))</formula>
    <label>GROUP ID</label>
    <type>Text</type>
</CustomField>