force-app/main/default/objects/Incomplete_Job__c/fields/Incomplete_Reason__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Reason__c</fullName>
    <label>Incomplete Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requires Bid/Additional Funds</fullName>
            </value>
            <value>
                <fullName>Not Enough Time</fullName>
            </value>
            <value>
                <fullName>Too Far Away</fullName>
            </value>
            <value>
                <fullName>Unable to Access</fullName>
            </value>
            <value>
                <fullName>Weather</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>