force-app/main/default/objects/Incomplete_Job__c/fields/Job_Incomplete_Due_to_Weather__c.field-meta.xml
<CustomField>
    <fullName>Job_Incomplete_Due_to_Weather__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incomplete Due to Weather</label>
    <type>Checkbox</type>
</CustomField>