force-app/main/default/objects/Incomplete_Job__c/fields/Notification_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Notification_Sent_Date__c</fullName>
    <label>Notification Sent Date</label>
    <type>DateTime</type>
</CustomField>