force-app/main/default/objects/Incomplete_Job__c/fields/Notification_Trigger_ID__c.field-meta.xml
<CustomField>
    <fullName>Notification_Trigger_ID__c</fullName>
    <formula>IF( Pending_Notification__c =  FALSE, 0, 
IF( Time_Zone__c = &quot;EASTERN&quot;, 1, 
 IF(Time_Zone__c = &quot;CENTRAL&quot;, 2, 
  IF(Time_Zone__c = &quot;MOUNTAIN&quot;, 3, 
   IF(Time_Zone__c = &quot;PHOENIX&quot;, 4, 
    IF(Time_Zone__c = &quot;PACIFIC&quot;, 5, null
    )
   )
  )
 )
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notification Trigger ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>