force-app/main/default/objects/Incomplete_Job__c/fields/Pending_Notification__c.field-meta.xml
<CustomField>
    <fullName>Pending_Notification__c</fullName>
    <formula>AND(Scheduled_Date__c = TODAY(),ISBLANK(TEXT(Incomplete_Reason__c )),ISBLANK(Notification_Sent_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending Notification</label>
    <type>Checkbox</type>
</CustomField>