force-app/main/default/objects/Incomplete_Job__c/fields/Survey_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Survey_Completion_Date__c</fullName>
    <label>Survey Completion Date</label>
    <type>DateTime</type>
</CustomField>