force-app/main/default/objects/Incomplete_Job__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Time_Zone__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Address__c</columns>
    <columns>Contractor_ID__c</columns>
    <columns>Scheduled_Date__c</columns>
    <columns>Incomplete_Reason__c</columns>
    <columns>Job_Incomplete_Due_to_Weather__c</columns>
    <columns>GROUP_ID__c</columns>
    <columns>Pending_Notification__c</columns>
    <columns>Notification_Sent_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>